@@ -24,7 +24,6 @@
 #ifndef _TMW_LOCALPLAYER_H
 #define _TMW_LOCALPLAYER_H
 
-#include "guild.h"
 #include "player.h"
 
 // TODO move into some sane place...
@@ -151,33 +150,6 @@ class LocalPlayer : public Player
          */
         virtual void
         drawName(Graphics *, int, int) {};
-
-        /**
-         * Adds a guild to the local player.
-         */
-        void addGuild(short guildId, bool inviteRights);
-
-        /**
-         * Removers a guild from the local player.
-         */
-        void removeGuild(short guildId);
-
-        /**
-         * Finds a guild the local player belongs to, by the guildId
-         * @return returns the guild associated with the guildId
-         */
-        Guild* findGuildById(short guildId);
-
-        /**
-         * Finds a guild the local player belongs to, by the guild's name.
-         * @return returns the guild with that name
-         */
-        Guild* findGuildByName(const std::string &guildName);
-
-        /**
-         * Get number of guilds the player belongs to
-         */
-        short getNumberOfGuilds();
 
         /**
          * Check the player has permission to invite users
@@ -368,9 +340,6 @@ class LocalPlayer : public Player
 
     protected:
         void walk(unsigned char dir);
-
-        // Character guild information
-        std::vector<Guild*> mGuilds;
 
         // Character status:
         std::vector<int> mAttributeBase;
